--- a/recipes/scvi-tools/meta.yaml
+++ b/recipes/scvi-tools/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "scvi-tools" %}
-{% set version = "0.7.0a4" %}
+{% set version = "0.7.0a2" %}
 
 package:
   name: "{{ name|lower }}"
@@ -7,49 +7,44 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 159b177eb984e30a1f73b9931445f07c68312d43a928d2e4f74bc72093ed866c
+  sha256: c450669da83cffad6b6f5c6da3f8a8a42fa5bb5413c4f353d7c76c33f0e27a8e
 
 build:
   number: 0
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
-  noarch: generic
 
 requirements:
   host:
     - anndata >=0.7.4
-    - poetry >=1.0.9
     - h5py >=2.9.0
     - hyperopt ==0.1.2
     - ipywidgets
     - numba >=0.41.0
     - numpy >=1.17.0
     - pandas >=1.0
-    - pip >=19.0
-    - python >=3.6
+    - pip
+    - python
     - rich >=6.2.0
     - scikit-learn >=0.21.2
     - toml
-    - pytorch >=1.3
+    - torch >=1.3
     - tqdm >=4.31.1
     - xlrd >=1.2.0
   run:
     - anndata >=0.7.4
-    - poetry >=1.0.9
     - h5py >=2.9.0
     - hyperopt ==0.1.2
     - ipywidgets
     - numba >=0.41.0
     - numpy >=1.17.0
     - pandas >=1.0
-    - python >=3.6
+    - python
     - rich >=6.2.0
     - scikit-learn >=0.21.2
     - toml
-    - pytorch >=1.3
+    - torch >=1.3
     - tqdm >=4.31.1
     - xlrd >=1.2.0
-    - dataclasses >=0.7 # [py36]
-    - typing-extensions >=3.7.4 # [py36, py37]
 
 test:
   imports:
@@ -58,28 +53,23 @@ test:
     - scvi.core.models
     - scvi.core.modules
     - scvi.core.modules._base
-    - scvi.core.data_loaders
+    - scvi.core.posteriors
     - scvi.core.trainers
     - scvi.core.utils
-    - scvi.data
-    - scvi.data._built_in_data
+    - scvi.dataset
+    - scvi.dataset._built_in_data
     - scvi.inference
-    - scvi.model
-  requires:
-    - pytest
+    - scvi.models
 
 about:
   home: https://github.com/YosefLab/scvi-tools
-  license: BSD-3-Clause
+  license: BSD
   license_family: BSD
-  license_file: LICENSE
+  license_file: 
   summary: Deep generative models for end-to-end analysis of single-cell omics data.
-  doc_url: https://scvi.readthedocs.io
-  dev_url: https://github.com/YosefLab/scvi-tools
+  doc_url: 
+  dev_url: 
 
 extra:
   recipe-maintainers:
-    - romain-lopez
-    - jeff-regier
-    - adamgayoso
-    - galenxing
+    - your-github-id-here
